# advanced-web-search

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  README.tr.md  docker-compose.user.yml  docker-compose.yml  pyproject.toml  setup.ps1  setup.sh  start.ps1  start.sh
.github/workflows/: publish.yml
assets/screenshots/: .gitkeep
backend/advanced_web_search/: __init__.py  __main__.py  cli.py  config.py  export.py
backend/advanced_web_search/api/: main.py  routes_export.py  routes_projects.py  routes_research.py  routes_settings.py  routes_sources.py
backend/advanced_web_search/db/: database.py  repositories.py  schema.sql
backend/advanced_web_search/embeddings/: embedder.py  reranker.py
backend/advanced_web_search/graph/: builder.py  events.py  runner.py  state.py
backend/advanced_web_search/llm/: hardware.py  provider.py  vault.py
backend/advanced_web_search/models/: schemas.py
backend/advanced_web_search/retrieval/: dedup.py  vector_store.py
backend/advanced_web_search/scoring/: ranker.py
backend/advanced_web_search/sources/: academic_arxiv.py  academic_core.py  academic_crossref.py  academic_doaj.py  academic_europepmc.py  academic_openalex.py  academic_pubmed.py  academic_semanticscholar.py  academic_unpaywall.py  base.py  fulltext.py  registry.py  snowball.py  web_brave.py  web_duckduckgo.py  web_searxng.py  web_tavily.py
backend/advanced_web_search/utils/: http.py  text.py
brand/: preview.html
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/components/: AgentTrace.tsx  ApprovalPanel.tsx  AskReport.tsx  ExportMenu.tsx  MermaidDiagram.tsx  ModelProviders.tsx  Nav.tsx  NoModelBanner.tsx  ReportView.tsx  ResearchTrail.tsx  ScoreWeights.tsx  SourceCard.tsx  SourceDiversity.tsx  SourceTable.tsx  StatusBadge.tsx  TerminalLog.tsx  TopicGraph.tsx
frontend/src/lib/: api.ts  i18n.ts  languages.ts  reconstructTrace.ts  sse.ts  types.ts  useResizable.ts
scripts/: dev.py
tests/: conftest.py  test_e2e_graph.py  test_registry_timeout.py  test_vault.py
(+26 files in other folders)
